--- a/app/src/main/res/layout/activity_lihat_detail_data.xml
+++ b/app/src/main/res/layout/activity_lihat_detail_data.xml
@@ -26,7 +26,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/edit_jabatan"
+        android:id="@+id/edit_no_rekening"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -35,7 +35,16 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/edit_gaji"
+        android:id="@+id/edit_alamat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="Name"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/edit_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
