--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -26,4 +26,16 @@
         android:textColor="#270303"
         android:textSize="24sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txt_norekening"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_weight="1"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textColor="#270303"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 </LinearLayout>
