--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -1,41 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/txt_id"
-        android:layout_width="10dp"
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="#270303"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:background="@android:color/white"
+        android:layout_margin="40dp">
 
-    <TextView
-        android:id="@+id/txt_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textAlignment="textStart"
-        android:textColor="#270303"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+         <TableRow
+             android:background="@color/purple_500">
 
-    <TextView
-        android:id="@+id/txt_norekening"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textAlignment="textStart"
-        android:textColor="#270303"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="ID"
+                    android:textColor="@color/white"
+                    android:padding="10sp"
+                    android:textSize="14sp"
+                    android:layout_weight="4"
+                    android:gravity="center_horizontal"
+                    />
+
+             <TextView
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:text="Nama"
+                 android:textColor="@color/white"
+                 android:padding="10sp"
+                 android:textSize="14sp"
+                 android:layout_weight="4"
+                 android:gravity="center_horizontal"
+                 />
+
+             <TextView
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:text="No Rekening"
+                 android:textColor="@color/white"
+                 android:padding="10sp"
+                 android:textSize="14sp"
+                 android:layout_weight="4"
+                 android:gravity="center_horizontal"
+                 />
+
+
+         </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/txt_id"
+                android:text="TextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:textAlignment="gravity"
+                android:textColor="#6200EA"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_name"
+                android:text="TextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:textAlignment="gravity"
+                android:textColor="#6200EA"
+                android:textStyle="bold"  />
+
+            <TextView
+                android:id="@+id/txt_norekening"
+                android:text="TextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="10sp"
+                android:textSize="14sp"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:textAlignment="gravity"
+                android:textColor="#6200EA"
+                android:textStyle="bold" />
+
+        </TableRow>
+
+    </TableLayout>
+
+
 </LinearLayout>
