fix ui detil item

--- a/app/src/main/res/layout/activity_lihat_detail_data.xml
+++ b/app/src/main/res/layout/activity_lihat_detail_data.xml
@@ -5,7 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="40dp"
     tools:context=".LihatDetailDataActivity">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Detail Nasabah"
+        android:textColor="@color/purple_500"
+        android:textSize="34sp" />
 
     <EditText
         android:id="@+id/edit_id"
