--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -8,87 +8,86 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="14dp"
         android:background="@android:color/white"
-        android:layout_margin="40dp">
+        android:padding="0dp">
 
-         <TableRow
-             android:background="@color/purple_500">
+        <TableRow android:background="@color/purple_500">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="ID"
-                    android:textColor="@color/white"
-                    android:padding="10sp"
-                    android:textSize="14sp"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal"
-                    />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="ID"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
 
-             <TextView
-                 android:layout_width="0dp"
-                 android:layout_height="wrap_content"
-                 android:text="Nama"
-                 android:textColor="@color/white"
-                 android:padding="10sp"
-                 android:textSize="14sp"
-                 android:layout_weight="4"
-                 android:gravity="center_horizontal"
-                 />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="Nama"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
 
-             <TextView
-                 android:layout_width="0dp"
-                 android:layout_height="wrap_content"
-                 android:text="No Rekening"
-                 android:textColor="@color/white"
-                 android:padding="10sp"
-                 android:textSize="14sp"
-                 android:layout_weight="4"
-                 android:gravity="center_horizontal"
-                 />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="No Rekening"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
 
 
-         </TableRow>
+        </TableRow>
 
-        <TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/txt_id"
-                android:text="TextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="10sp"
-                android:textSize="14sp"
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="TextView"
                 android:textAlignment="gravity"
                 android:textColor="#6200EA"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_name"
-                android:text="TextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="10sp"
-                android:textSize="14sp"
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="TextView"
                 android:textAlignment="gravity"
                 android:textColor="#6200EA"
-                android:textStyle="bold"  />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_norekening"
-                android:text="TextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="10sp"
-                android:textSize="14sp"
                 android:layout_weight="4"
                 android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="TextView"
                 android:textAlignment="gravity"
                 android:textColor="#6200EA"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
         </TableRow>
